# Media-Refinery

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  Dockerfile  FAQ.md  MAINTAINERS_GUIDE.md  METRICS.md  Makefile  PERFORMANCE.md  PRODUCT_VISION.md  README.md  SECURITY.md  SUMMARY.md  Show.Name.S01E01.mkv  TESTING.md  alembic.ini  config.example.yaml  coverage.xml  docker-compose.yml  go.mod  go.sum  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_refinery.py  sample.avi  sample.mov  sample.wmv  sample_audio.flac  sample_video.mkv  verify_audio_converter.py
.github/: API.md  ISSUE_AUDIO.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: user_story.md
.github/workflows/: ci.yml  docker-build.yml  (+2 more)
alembic/: env.py
app/: main.py  worker.py
data/: media_refinery.sqlite  media_refinery.sqlite-shm  media_refinery.sqlite-wal
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MAINTAINERS_GUIDE.md  README.md  STORY_1.4_ACCEPTANCE_VERIFICATION.md  SUMMARY.md  audio_validation.md
examples/: audio_format_detection_example.py  audio_validation_example.py
features/: environment.py
profiles/: lg_webos.json  samsung_tizen.yaml
sample_media/: README.md  Show.Name.S01E01.mkv  config.example.yaml  sample.avi  sample.mov  sample.wmv  sample_audio.flac  sample_video.mkv
scripts/: diag_ffmpeg.py  diag_out.txt  media_refinery_debug.py
test/: integration_test.sh
tests/: conftest.py  test_tmdb_service.py
(+225 files in other folders)
