[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media_refinery"
version = "0.1.0"
description = "Media Refinery: A Python-based media processing pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}

[project.dependencies]
pydantic = "^2.0"
typer = "^0.9.0"
rich = "^13.0.0"
pytest = "^7.0.0"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.20.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers"
testpaths = ["tests"]